<resources>
    <string name="app_name">eMobilePOS</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_menu">eMobilePOS</string>
    <string name="main_menu_header">Sales</string>
    <string name="sales_button">No customer selected</string>
    <string name="add_main_hint1">None</string>
    <string name="add_main_hint2">$0.00</string>
    <string name="search_hint">Search by: Name/ID</string>
    <string name="synch_subtitle">Synchronized items are marked green</string>
    <string name="intentAction" translatable="false">com.android.emobilepos.RECVR</string>
    <string name="intentAction2" translatable="false">com.android.emobilepos.RECVR2</string>
    <string name="intentAction3" translatable="false">com.android.emobilepos.RECVR3</string>
    <string name="intentAction4" translatable="false">com.android.emobilepos.RECVR4</string>
    <string name="intentAction5" translatable="false">com.android.emobilepos.RECVR5</string>
    <string name="hint_enter_pwd">Enter Password</string>
    <string name="hint_search">Search</string>
    <string name="enter_name">Enter Name</string>
    <string name="last_saved">Last Saved</string>
    <string name="notification_channel_id">com.android.emobilepos.NOTIFICATION_ID</string>
    <string name="notification_channel_name">EMOBILEPOS CHANNEL</string>
    <string name="notification_channel_description">A notification channel for eMobilePOS application.</string>
    <string name="inventory_transfer">Inventory Transfer</string>
    <string name="header_title_addons">Addons</string>
    <string name="header_title_customers">Customers</string>
    <string name="header_title_method">Payment Method</string>
    <string name="header_title_gift_card">Gift Card</string>
    <string name="header_title_loyalty_card">Loyalty Card</string>
    <string name="header_title_reward_card">Reward Card</string>
    <string name="header_title_activate">Activate</string>
    <string name="header_title_balance_inquiry">Balance Inquiry</string>
    <string name="header_title_add_balance">Add Balance</string>
    <string name="enter_password">Enter Password</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="invalid_password">Invalid Password, Try again\u002E\u002E\u002E</string>
    <string name="cc_offline">CC Offline</string>
    <string name="enter_price">Enter Price</string>
    <string name="ok">OK</string>
    <string name="warning_empty_products">No Products have been added, try again</string>
    <string name="warning_signature_required">Signature Require Mode Is Enabled, Please Enter Signature</string>
    <string name="warning_no_customer_selected">No Customer Selected</string>
    <string name="warning_title">Warning</string>
    <string name="warning_exit_now">Are you sure you want to exit?</string>
    <string name="warning_email_invalid">Invalid e-mail address, try again.</string>
    <string name="warning_ship_address_required">Shipping Address is Required\u002E\u002E\u002E</string>
    <string name="err_invalid_device">Device is not compatible</string>
    <string name="dlog_title_print_details">Print details</string>
    <string name="dlog_msg_print_details">Include details on receipt?</string>
    <string name="dlog_title_error">Error</string>
    <string name="dlog_msg_select_customer">Select a customer before proceeding</string>
    <string name="dlog_title_waiter_signin">Waiter Signin</string>
    <string name="dlog_title_confirm">Confirm</string>
    <string name="dlog_title_success">Success</string>
    <string name="dlog_title_choose_action">Choose Action</string>
    <string name="dlog_title_transaction_failed_to_process">Some transactions failed to process</string>
    <string name="dlog_title_conn_payment_device">Connect Payment Device</string>
    <string name="error_getting_credentials">An error occurred while getting Ingenico\'s credentials.</string>
    <string name="dlog_msg_conn_payment_device">Device not available, please turn it on (keep green\nbutton pressed for three seconds) and hit Connect.\n\nNote: Wait until the Bluetooth logo appears in the\nupper left corner of the device\'s screen to continue.</string>
    <string name="dlog_msg_turnon_payment_device">Please turn the payment device on (keep green\nbutton pressed for three seconds) and try again.</string>
    <string name="dlog_star_ip">IP Address</string>
    <string name="dlog_star_port">Port Number</string>
    <string name="picked_dlog_modify">Modify</string>
    <string name="picked_dlog_remove">Remove</string>
    <string name="picked_dlog_view_variations">View Variations</string>
    <string name="picked_dlog_override_price">Override Price</string>
    <string name="picked_dlog_cancel">Cancel</string>
    <string name="config_general_settings">General Settings</string>
    <string name="config_printing_settings">Printing Settings</string>
    <string name="config_other_settings">Other Settings</string>
    <string name="config_shifts">Shifts</string>
    <string name="config_cash_drawer">Cash Drawer</string>
    <string name="config_payment_processing">Payment Processing</string>
    <string name="config_open_cash_drawer">Open Cash Drawer</string>
    <string name="config_use_clerks">Use Clerks</string>
    <string name="config_restaurant_mode">Restaurant Mode</string>
    <string name="config_automatic_sync">Auto. Synch.</string>
    <string name="config_transaction_num_prefix">Transaction Num. Prefix</string>
    <string name="config_fast_scanning_mode">Fast Scanning Mode</string>
    <string name="config_signature_required_mode">Signature Required Mode</string>
    <string name="config_qr_code_reading">QR Code Reading Through Camera</string>
    <string name="config_enable_multi_category">Mult. Categories Per Product</string>
    <string name="config_skip_email_phone">Skip e-Mail and Phone Prompt</string>
    <string name="config_show_only_group_taxes">Show Only Group Taxes</string>
    <string name="config_retail_taxes">Item Based Taxes</string>
    <string name="config_require_customer">Require Customer</string>
    <string name="config_show_confirmation_screen">Show Gratuity Screen</string>
    <string name="config_ask_order_comments">Ask for order comments</string>
    <string name="config_direct_customer_selection">Direct Customer Selection</string>
    <string name="config_display_customer_account_number">Display Customer Account Number</string>
    <string name="config_skip_want_add_more_products">Skip Want Add More Prod.</string>
    <string name="config_require_shift_transactions">Require Shift For Transactions</string>
    <string name="config_allow_customer_creation">Allow Customer Creation</string>
    <string name="config_scope_bar_in_restaurant_mode">Show Scope Bar in Restaurant Mode</string>
    <string name="config_default_transaction">Default Transaction</string>
    <string name="config_configure_home_menu">Configure Home Menu</string>
    <string name="config_block_price_level_change">Block Price Level Change</string>
    <string name="config_require_address">Require Address</string>
    <string name="config_require_po">Require PO</string>
    <string name="config_clear_images_cache">Clear Images Cache</string>
    <string name="config_skip_manager_price_override">Skip Manager Price Override</string>
    <string name="config_require_password_to_clockout">Require Password To Clock Out</string>
    <string name="config_maps_inside_app">Maps Inside App</string>
    <string name="config_enable_location_inventory">Use Location Inventory</string>
    <string name="config_allow_manual_credit_card">Allow Manual Credit Card</string>
    <string name="config_process_check_online">Process Check Online</string>
    <string name="config_show_tips_for_cash">Show Tips For Cash</string>
    <string name="config_audio_card_reader">Audio Card Reader</string>
    <string name="config_default_payment_method">Default Payment Method</string>
    <string name="config_return_require_refund">Return Require Refund</string>
    <string name="config_convert_to_reward">Convert To Reward</string>
    <string name="config_invoice_require_payment">Invoice Require Payment</string>
    <string name="config_invoice_require_full_payment">Invoice Require Full Payment</string>
    <string name="config_prefill_total_amount">Pre-fill Total Amount</string>
    <string name="config_use_store_and_forward">Use Store \u0026 Forward</string>
    <string name="config_store_and_forward_transactions">Store \u0026 Forward Transactions</string>
    <string name="config_enable_printing">Enable Printing</string>
    <string name="config_printek_info">Printek Info</string>
    <string name="config_star_info">Star Info</string>
    <string name="config_snbc_setup">SNBC Setup</string>
    <string name="config_set_printing_preferences">Set Printing Preferences</string>
    <string name="config_automatic_printing">Automatic Printing</string>
    <string name="config_configure_ingenico_settings">Configure Ingenico Settings</string>
    <string name="config_redetect_peripherals">Re-detect Peripherals</string>
    <string name="config_delete_saved_peripherals">Delete Saved Peripherals</string>
    <string name="config_wholesale_printout">Wholesale Printout</string>
    <string name="config_prompt_customer_copy">Prompt print receipt copy for CC payments</string>
    <string name="config_print_receipt_transaction_payments">Print receipt of transaction payments</string>
    <string name="config_handwritten_signature">Handwritten signature</string>
    <string name="config_printer_width">Printer Width</string>
    <string name="config_open_shift">Open Shift</string>
    <string name="config_expenses">Expenses</string>
    <string name="config_connect_to_bluetooth_peripheral">Connect to Bluetooth Peripheral</string>
    <string name="config_connect_to_usb_peripheral">Connect to USB Peripheral</string>
    <string name="config_support_troubleshooting">Support Troubleshooting</string>
    <string name="config_force_upload">Force Upload</string>
    <string name="config_backup_data">Backup Data</string>
    <string name="manual">Manual</string>
    <string name="btn_pay_with_loyalty">Pay with loyalty</string>
    <string name="config_restaurant_settings">Restaurant Settings</string>
    <string name="config_enable_togo_eatin">Enable section of \"To Go\"/\"Eat In\"</string>
    <string name="config_enable_table_selection">Enable table selection</string>
    <string name="config_ask_numbers_seats">Ask number of seats</string>
    <string name="move_product_seat">Change product seat</string>
    <string name="config_salesassociate_config">Table Configuration</string>
    <string name="config_mix_match"><![CDATA[Use Mix & Match]]></string>
    <string name="config_check_updates">Check for Updates</string>
    <string name="config_split_stationprint_by_categories">Split station print receipt by categories</string>
    <string name="config_holds_polling_service">Enable holds polling service</string>
    <string name="config_bixolon_setup">Bixolon Setup</string>
    <string name="config_clear_customer">Clear customer after transaction</string>
    <string name="config_multiple_prints">Enable multiple prints</string>
    <string name="config_clerk_management">Clerk Management</string>
    <string name="config_print_raster_mode">Print Raster Mode</string>
    <string name="config_syncplus_settings">Sync Plus Services</string>
    <string name="config_use_syncplus_services">Use Sync Plus Services</string>
    <string name="syncplus_connection_mode">Connection Mode</string>
    <string name="automatic">Automatic</string>
    <string name="config_use_permitreceipt_printing">Use Permit Receipt</string>
    <string name="config_customer_settings">Customer Settings</string>
    <string name="config_default_customer_display_name">Select Customer Name</string>
</resources>