<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/config_cash_drawer" 
        android:layout="@layout/settings_custom_header_layout">
        <Preference
            android:key="pref_open_cash_drawer"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_open_cash_drawer" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/config_other_settings" 
        android:layout="@layout/settings_custom_header_layout">
        <Preference
            android:key="pref_clear_images_cache"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_clear_images_cache" />

        <CheckBoxPreference
            android:key="pref_skip_manager_price_override"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_skip_manager_price_override" />
        <CheckBoxPreference
            android:key="pref_require_password_to_clockout"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_require_password_to_clockout" />
        <CheckBoxPreference
            android:key="pref_maps_inside_app"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_maps_inside_app" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/config_printing_settings" 
        android:layout="@layout/settings_custom_header_layout">
        <Preference 
            android:key = "pref_connect_to_bluetooth_peripheral"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_connect_to_bluetooth_peripheral"/>
        <Preference 
            android:key = "pref_connect_to_usb_peripheral"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_connect_to_usb_peripheral"/>
        <Preference
            android:key="pref_redetect_peripherals"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_redetect_peripherals" />
        <Preference
            android:key="pref_delete_saved_peripherals"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_delete_saved_peripherals" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/config_shifts" 
        android:layout="@layout/settings_custom_header_layout">
        <Preference
            android:key="pref_open_shift"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_open_shift" />
        <Preference
            android:key="pref_expenses"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_expenses" />
    </PreferenceCategory>

</PreferenceScreen>