<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:layout="@layout/settings_custom_header_layout"
        android:title="@string/config_other_settings">
        <MultiSelectListPreference
            android:defaultValue="@array/mainMenuDefaultKey"
            android:entries="@array/mainMenuArray"
            android:entryValues="@array/mainMenuKey"
            android:key="pref_configure_home_menu"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_configure_home_menu" />

        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/defaultTransEntries"
            android:entryValues="@array/defaultTransKey"
            android:key="pref_default_transaction"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_default_transaction" />

        <CheckBoxPreference
            android:key="pref_block_price_level_change"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_block_price_level_change" />
        <CheckBoxPreference
            android:key="pref_require_address"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_require_address" />
        <CheckBoxPreference
            android:key="pref_require_po"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_require_po" />

        <Preference
            android:key="pref_clear_images_cache"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_clear_images_cache" />

        <CheckBoxPreference
            android:key="pref_skip_manager_price_override"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_skip_manager_price_override" />
        <CheckBoxPreference
            android:key="pref_require_password_to_clockout"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_require_password_to_clockout" />
        <CheckBoxPreference
            android:key="pref_maps_inside_app"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_maps_inside_app" />
        <CheckBoxPreference
            android:key="pref_enable_location_inventory"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_enable_location_inventory" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout="@layout/settings_custom_header_layout"
        android:title="@string/config_syncplus_settings">
        <CheckBoxPreference
            android:key="pref_use_syncplus_services"
            android:layout="@layout/settings_custom_layout"
            android:title="@string/config_use_syncplus_services" />
        <SwitchPreference
            android:defaultValue="false"
            android:layout="@layout/settings_custom_layout"
            android:dependency="pref_use_syncplus_services"
            android:key="pref_syncplus_mode"
            android:switchTextOff="@string/automatic"
            android:switchTextOn="@string/manual"
            android:title="@string/syncplus_connection_mode" />
        <EditTextPreference
            android:dependency="pref_syncplus_mode"
            android:layout="@layout/settings_custom_layout"
            android:digits="0123456789."
            android:inputType="number"
            android:key="pref_syncplus_ip"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="0.0.0.0"
            android:title="@string/dlog_star_ip" />
        <EditTextPreference
            android:layout="@layout/settings_custom_layout"
            android:defaultValue="8001"
            android:dependency="pref_syncplus_mode"
            android:inputType="number"
            android:key="pref_syncplus_port"
            android:numeric="integer"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="8001"
            android:title="@string/dlog_star_port" />

    </PreferenceCategory>
</PreferenceScreen>